--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body {
   background-color: #DDDDDD;
 }
 
+.title-container {
+  display: flex;
+  justify-content: center;
+}
+
+.title {
+  text-decoration: none;
+}
+
 .header-menu {
   display: flex;
   justify-content: space-between;
